JRUBY-4774, WARBLER-15: Fix classpath and load path issues related to file paths containing spaces